--- a/blx-backend/requirements.txt
+++ b/blx-backend/requirements.txt
@@ -1,28 +1,47 @@
+alembic==1.13.1
+annotated-types==0.5.0
+anyio==3.7.1
 asgiref==3.4.1
 astroid==2.8.0
 autopep8==1.5.4
 click==7.1.2
+ecdsa==0.19.0
 fastapi==0.68.1
 h11==0.11.0
 httptools==0.6.1
+idna==3.4
 isort==5.9.3
 lazy-object-proxy==1.6.0
+Mako==1.3.2
+MarkupSafe==2.1.5
 mccabe==0.6.1
 motor==2.5.1
+mypy==1.5.1
+mypy-extensions==1.0.0
+passlib==1.7.4
 platformdirs==2.4.0
+psycopg2-binary==2.9.7
+pyasn1==0.6.0
 pycodestyle==2.6.0
 pydantic==1.10.17
+pydantic_core==2.6.3
 pylint==2.11.1
 pymongo==3.12.0
 python-dotenv==0.19.0
+python-jose==3.3.0
 PyYAML==6.0.1
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==1.4.41
+sqlalchemy2-stubs==0.0.2a35
+sqlmodel==0.0.8
 starlette==0.14.2
 toml==0.10.1
-typing-extensions==4.12.2
+typing_extensions==4.12.2
+ulid==1.1
 uvicorn==0.15.0
 uvloop==0.19.0
 watchgod==0.7
 websockets==10.0
 wrapt==1.12.1
-passlib==1.7.4
-python-jose==3.3.0
